add security to sidebar; update packages

--- a/packages/documentation/src/pages/platform/front-end-standards/security.mdx
+++ b/packages/documentation/src/pages/platform/front-end-standards/security.mdx
@@ -1,4 +1,8 @@
-# Front end security 
+---
+title: Frontend Security
+---
+
+# Overview  
 
 `vets-website` uses modern browser features to provide a secure experience for veterans. In general, these features are automatically included through the deployment process and require no configuration by front end engineers. 
 
