Trying to fix build error

--- a/packages/documentation/src/pages/getting-started/common-tasks/new-application.mdx
+++ b/packages/documentation/src/pages/getting-started/common-tasks/new-application.mdx
@@ -128,15 +128,20 @@ And that's it! If you fill out the routes.jsx file with pages that exist, you sh
 
 The above steps will only enable your application in our staging and dev environments. In order to enable it in production, you'll have to remove the feature flag added into your application's `manifest.json`.
 
-<pre>
+```js
 {
-"appName": "My new application",
-"entryFile": "./my-new-application-entry.jsx",
-"entryName": "my-new-application",
-"rootUrl": "/my-new-application",
-"template": {
-  "title": "My new application",
-  "layout": "page-react.html",
-  <del>"vagovprod": false</del>
+  "appName": "My new application",
+  "entryFile": "./my-new-application-entry.jsx",
+  "entryName": "my-new-application",
+  "rootUrl": "/my-new-application",
+  "template": {
+    "title": "My new application",
+    "layout": "page-react.html",
+    "description": "A new application!",
+    "keywords": "not required, but good practice for public apps",
+
+    // ALLOW THIS TO SHIP TO PRODUCTION BY REMOVING LINE BELOW
+    // "vagovprod" false
+  }
 }
-</pre>
+```
