Fix ErrorableTextInput code example

--- a/packages/formation-react/src/components/ErrorableTextInput/ErrorableTextInput.mdx
+++ b/packages/formation-react/src/components/ErrorableTextInput/ErrorableTextInput.mdx
@@ -22,7 +22,7 @@ state = {
 ```javascript
 import ErrorableTextInput from '@department-of-veterans-affairs/formation-react/ErrorableTextInput'
 
-<ErrorableTextArea
+<ErrorableTextInput
   disabled={false}
   errorMessage='Error message'
   label='Label'
