--- a/packages/documentation/src/pages/forms/about-the-schema-and-uischema-objects.mdx
+++ b/packages/documentation/src/pages/forms/about-the-schema-and-uischema-objects.mdx
@@ -137,6 +137,20 @@ The VAFS code includes additional `uiSchema` functionality not found in the RJSF
   // component. Can also be used with regular widgets.
   'ui:reviewWidget': WidgetComponent,
 
+  // Renders a custom review field on the review page. Only used when you specify a widget
+  // component. The `children` parameter is a component from the `'ui:reviewWidget'`, but
+  // is only rendered by this custom reviewField if the schema for it is not an `object`
+  // or `array`
+  'ui:reviewField': ({ children, schema, uiSchema }) => (
+    <dl className="review-row">
+      <dt>
+        {uiSchema['ui:title']}
+        {uiSchema['ui:description]}
+      </dt>
+      <dd>{children}</dd>
+    </dl>
+  ),
+
   // Provides a function to make a field conditionally required. The data in the whole form,
   // with no page breaks, is the only parameter. Don't make a field required in the JSON
   // schema and in addition to using `ui:required` on that field. The index argument is
