--- a/packages/documentation/src/pages/forms/available-features-and-usage-guidelines.mdx
+++ b/packages/documentation/src/pages/forms/available-features-and-usage-guidelines.mdx
@@ -410,6 +410,7 @@ The review page renders the form data in review mode automatically. However, you
 
 This property is nested directly under `uiSchema`:
 - `'ui:reviewWidget'`: takes a widget component to render on the review page for that field. Default review widgets are automatically rendered, so only use this if you need to customize the review widget that is used.
+- `'ui:reviewField'`: allows a custom review component to be built for each field on the review page. It is given the result of the `'ui:reviewWidget'` within the `children` parameter, so this value must be rendered within the custom function.
 
 These properties are nested under `uiSchema: { 'ui:options': {} }`:
 - `hideOnReview`: Hides the field on the review page; takes a `boolean`
