Add `onHeaderClick` to .mdx and remove `renderCustomCell` from propTypes

--- a/packages/formation-react/src/components/SortableTable/SortableTable.mdx
+++ b/packages/formation-react/src/components/SortableTable/SortableTable.mdx
@@ -58,6 +58,7 @@ import SortableTable from '@department-of-veterans-affairs/formation-react/Sorta
       }
     ]
   }
+  onHeaderClick={(value, order) => {}}
 />
 ```
 
@@ -111,5 +112,6 @@ import SortableTable from '@department-of-veterans-affairs/formation-react/Sorta
         }
       ]
     }
+    onHeaderClick={(value, order) => {}}
   />
 </div>
