Update formation-react docs
- Fix link to the previewing-changes doc so you can navigate to it
- Fix Markdown formatting of the previewing-changes doc
- Minor copy fixes/changes

--- a/packages/documentation/src/pages/getting-started/common-tasks/updating-formation.mdx
+++ b/packages/documentation/src/pages/getting-started/common-tasks/updating-formation.mdx
@@ -1,5 +1,5 @@
 ---
-title: Updating Formation and Formataion React
+title: Updating Formation and Formation React
 tags: formation, formation-react, update, release, publish, npm
 ---
 
@@ -9,7 +9,7 @@ You can find a detailed guide on contributing to formation at [https://dev-desig
 ## Making updates to formation-react
 1. Components should be created and tested in vets-website first before being moved over to formation-react
 2. Transfer component to formation-react
-3. Test the formation-react version of the component in vets-website before publishing [Check out these instructions on how to do so](/previewing-changes)
+3. Test the formation-react version of the component in vets-website before publishing. [Check out these instructions on how to do so](./previewing-changes).
 4. Write component tests
 5. [Create your react component documentation](/documentation-guide/doc-page)
 
