Update unit test and markdown with new `className` prop for Breadcrumbs

--- a/packages/formation-react/src/components/Breadcrumbs/Breadcrumbs.mdx
+++ b/packages/formation-react/src/components/Breadcrumbs/Breadcrumbs.mdx
@@ -30,9 +30,9 @@ The breadcrumb component switches to a single previous step link when the screen
 
 Passing prop `ariaLabel="<STRING>"` to the `<Breadcrumbs />` component will override the default `aria-label="Breadcrumb"` declaration. If you plan to add a unique aria-label, please consider testing with one or more assistive devices to ensure proper context.
 
-### customClasses (STRING)
+### className (STRING)
 
-Passing prop `customClasses="<STRING STRING>"` to the `<Breadcrumbs />` component will append your space-separated classes to the `<nav class="va-nav-breadcrumbs">` class list.
+Passing prop `className="<STRING STRING>"` to the `<Breadcrumbs />` component will append your space-separated classes to the `<nav class="va-nav-breadcrumbs">` class list.
 
 ### id (STRING)
 
