Adopt cvalarida's Template Title
Co-Authored-By: Chris Valarida <chris.valarida@adhocteam.us>

--- a/packages/documentation/src/pages/forms/available-features-and-usage-guidelines.mdx
+++ b/packages/documentation/src/pages/forms/available-features-and-usage-guidelines.mdx
@@ -443,7 +443,7 @@ preSubmitInfo: {
   customComponent: ImportedCustomComponent
 }
 ```
-#### default PrivacyAgreementTemplate:
+#### Default `PrivacyAgreement`
 ![Required checkbox before form submission](../../images/forms/Required-Checkbox.jpg)
 
 ### example of customComponent override:
