Adopt cvalarida's custom component example title
Co-Authored-By: Chris Valarida <chris.valarida@adhocteam.us>

--- a/packages/documentation/src/pages/forms/available-features-and-usage-guidelines.mdx
+++ b/packages/documentation/src/pages/forms/available-features-and-usage-guidelines.mdx
@@ -446,7 +446,7 @@ preSubmitInfo: {
 #### Default `PrivacyAgreement`
 ![Required checkbox before form submission](../../images/forms/Required-Checkbox.jpg)
 
-### example of customComponent override:
+#### `customComponent` example
 ![Required checkbox before form submission](../../images/forms/preSubmitInfo-customComponent.jpeg)
 
 #### Usage guidelines
