--- a/packages/documentation/src/pages/forms/available-features-and-usage-guidelines.mdx
+++ b/packages/documentation/src/pages/forms/available-features-and-usage-guidelines.mdx
@@ -429,8 +429,7 @@ To configure this feature, place a `preSubmitInfo` object in the `formConfig`. T
 * `field`: The name of the form field for the required checkbox. This field has the value `true` in the submitted form data.
 * `label`: A text string or React element that labels the checkbox.
 * `error`: A text string or React element displayed as an error message if the user attempts to submit the form without checking the checkbox.
-* `customComponent`: A React element that will replace the default [`PrivacyAgreement`](https://github.com/department-of-veterans-affairs/vets-website/blob/master/src/platform/forms/components/PrivacyAgreement.jsx) inside the `preSubmitInfo` component.
-
+* `CustomComponent`: A React element that will replace the default [`PrivacyAgreement`](https://github.com/department-of-veterans-affairs/vets-website/blob/master/src/platform/forms/components/PrivacyAgreement.jsx) inside the [SubmitController](https://github.com/department-of-veterans-affairs/vets-website/tree/master/src/platform/forms-system/src/js/review/SubmitController.jsx) component.
 
 This is an example of `preSubmitInfo`:
 
@@ -440,18 +439,21 @@ preSubmitInfo: {
   field: 'privacyAgreementAccepted',
   label: <span>I have read and accept the <a href="/privacy">privacy policy</a>.</span>,
   error: 'You must accept the privacy policy before continuing',
-  customComponent: ImportedCustomComponent
+  // optional override
+  CustomComponent: CustomPreSubmitComponent
 }
 ```
 #### Default `PrivacyAgreement`
 ![Required checkbox before form submission](../../images/forms/Required-Checkbox.jpg)
 
-#### `customComponent` example
+#### `CustomComponent` example
 ![Required checkbox before form submission](../../images/forms/preSubmitInfo-customComponent.jpeg)
 
 #### Usage guidelines
 
 If you don't specify a `preSubmitInfo` section, no notice or checkbox appears above the submit button. Most applications will want to give some sort of notice to the user before they submit the form. Although this section is optional, we recommend you specify it.
+
+`sectionCompleted` is a function which expects a single boolean parameter indicating when all conditions of your `CustomPreSubmitComponent` are met. If not toggled to true form will not submit.
 
 For the code implementation, see [PreSubmitSection](https://github.com/department-of-veterans-affairs/vets-website/tree/master/src/platform/forms-system/src/js/components/PreSubmitSection.jsx) and [SubmitController](https://github.com/department-of-veterans-affairs/vets-website/tree/master/src/platform/forms-system/src/js/review/SubmitController.jsx).
 
